Added db tables and migrations

--- a/LeaveManagement.Web/appsettings.json
+++ b/LeaveManagement.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-LeaveManagement.Web-69cf08ee-2da7-48dc-9046-45dc66bab965;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=LeaveManagementNet6;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=False"
   },
   "Logging": {
     "LogLevel": {
